--- a/desafios/d010/style.css
+++ b/desafios/d010/style.css
@@ -30,12 +30,13 @@ header p {
 
 nav {
     text-align: left;
-    padding: 15px 10px 10px 10px;
+    padding: 30px 10px 10px 10px;
 }
 
 nav > a {
     color:#9cf8c5;
     padding: 10px;
+    margin: 10px 10px 0px 0px;
     border-radius: 5px;
     text-decoration: none;
     transition-duration: 1s;
